# design-patterns-lab2-api

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  env-template  swagger-docs.yaml
0_root/: CMakeLists.txt
0_root/include/: common_json.hpp  env.hpp  utilities.hpp
0_root/include/endpoints/: capybara.hpp  habitat.hpp  visitor.hpp
0_root/public/: index.html
0_root/src/: utilities.cpp
0_root/src/endpoints/: capybara.cpp  habitat.cpp  visitor.cpp
1_integration/: CMakeLists.txt
1_integration/include/: retry.hpp
1_integration/src/: retry.cpp
2_external_api/: main.py
docker/: ExternalApiDockerfile  IntegrationDockerfile
